[project]
name = "aiotieba-reviewer"
description = "High Flexibility Anti-spam Framework Based on Aiotieba"
authors = [{ name = "Starry-OvO", email = "starry.qvq@gmail.com" }]
urls = { Repository = "https://github.com/Starry-OvO/aiotieba-reviewer/", Documentation = "https://review.aiotieba.cc/" }
readme = "README.md"
keywords = ["baidu", "tieba"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Session",
]
requires-python = ">=3.10,<3.13"
dependencies = ["aiotieba[speedup,img]<5,>=4.1.0", "tomli<3,>=1.1.0;python_version<'3.11'", "asyncmy<0.3,>=0.2.9"]
dynamic = ["version"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "aiotieba_reviewer/__version__.py"

[tool.rye]
managed = true
dev-dependencies = ["mkdocs-material"]

[tool.ruff]
line-length = 120
target-version = "py310"
preview = true

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint]
select = ["W", "E", "F", "I", "UP", "YTT", "A", "B", "C4", "PIE", "PT", "PERF", "FURB"]
ignore = ["E402", "E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"typing.py" = ["F401"]
"*_pb2.py" = ["F401"]
