[project]
name = "aiotieba-reviewer"
version = "0.0.0"
description = "High Flexibility Anti-spam Framework Based on Aiotieba"
authors = [{ name = "lumina37", email = "starry.qvq@gmail.com" }]
urls = { Repository = "https://github.com/lumina37/aiotieba-reviewer/", Documentation = "https://review.aiotieba.cc/" }
readme = "README.md"
keywords = ["baidu", "tieba"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP :: Session",
]
requires-python = ">=3.11"
dependencies = ["aiotieba[speedup,img]<5,>=4.4.9", "asyncpg<0.32,>=0.29"]

[build-system]
requires = ["uv_build>=0.11.28,<0.12"]
build-backend = "uv_build"

[dependency-groups]
docs = ["mkdocs-material"]
